actualizacion de gustavo

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -281,182 +281,182 @@
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
-      <!-- ======= "Necesitas una web si" section ======= -->
-      <section class="container redesSociales d-flex my-5" data-aos="fade-up">
-        <div class="row">
-          <div class="redesSociales-video col-lg-6">
-            <img src="./assets/img/gif's/redes-sociales.gif" alt="gif de una chica mirando sus redes">
-          </div>
-          <div class="redesSociales-info col-lg-6">
-            <p>Redes sociales</p>
-            <h1>
-              <strong class="redesSociales-info-title">Tus principales aliadas</strong>
-            </h1>
-            <p>
-              En un mundo repleto de contenido, asegurarte de atraer la
-              mirada del público es esencial:
-            </p>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Videos Magnéticos</strong></h5>
-                <p>
-                  Son una forma efectiva de captar la atención de tu audiencia y
-                  diferenciarte de la competencia. Suelen generar más
-                  interacción, lo que te permite construir una comunidad más
-                  activa y fiel.
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10 mb-3">
-                <h5><strong>Delega “Fácil y feliz”</strong></h5>
-                <p>
-                  Delegar tus redes sociales a expertos te permite enfocarte en lo
-                  que haces mejor, ya que nos integramos como parte de su
-                  empresa en el área de publicidad.
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Aumenta tu impacto</strong></h5>
-                <p>
-                  Un crecimiento constante de tu audiencia puede impulsar tu
-                  proyecto. Es una inversión en la visibilidad, la credibilidad y el
-                  crecimiento a largo plazo.
-                </p>
-              </div>
-            </div>
-          </div>
+<!-- ======= "Necesitas una web si" section ======= -->
+<section class="container redesSociales d-flex my-5" data-aos="fade-up">
+  <div class="row">
+    <div class="redesSociales-video col-lg-6">
+      <img src="./assets/img/gif's/redes-sociales.gif" alt="gif de una chica mirando sus redes">
+    </div>
+    <div class="redesSociales-info col-lg-6">
+      <p>Redes sociales</p>
+      <h1>
+        <strong class="redesSociales-info-title">Tus principales aliadas</strong>
+      </h1>
+      <p class="mb-4">
+        En un mundo repleto de contenido, asegurarte de atraer la
+        mirada del público es esencial:
+      </p>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
         </div>
-      </section>
-      <!-- ======= End "Necesitas una web si" section ======= -->
+        <div class="col-lg-10">
+          <h5><strong>Videos Magnéticos</strong></h5>
+          <p>
+            Son una forma efectiva de captar la atención de tu audiencia y
+            diferenciarte de la competencia. Suelen generar más
+            interacción, lo que te permite construir una comunidad más
+            activa y fiel.
+          </p>
+        </div>
+      </div>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
+        </div>
+        <div class="col-lg-10 mb-3">
+          <h5><strong>Delega “Fácil y feliz”</strong></h5>
+          <p>
+            Delegar tus redes sociales a expertos te permite enfocarte en lo
+            que haces mejor, ya que nos integramos como parte de su
+            empresa en el área de publicidad.
+          </p>
+        </div>
+      </div>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
+        </div>
+        <div class="col-lg-10">
+          <h5><strong>Aumenta tu impacto</strong></h5>
+          <p>
+            Un crecimiento constante de tu audiencia puede impulsar tu
+            proyecto. Es una inversión en la visibilidad, la credibilidad y el
+            crecimiento a largo plazo.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ======= End "Necesitas una web si" section ======= -->
 
-      <!-- ======= Landing pages section ======= -->
-      <section class="container packs my-5">
-        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5">
-            <img src="./assets/img/servicios/macbook.png" alt="macbook con un editor abierto" width="100%">
-          </div>
-          <div id="packs-info" class="packs-info col-lg-6">
-              <container class="container">
-                <div class="col">
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4 mb-3">Edición de videos Mensual</h3>
-                    <p>
-                      Necesitas una buena calidad de contenido, esa
-                      es una de las razones principales para invertir.
-                      Ahorrá muchísimo tiempo y problemas con un
-                      servicio profesional y desarrollado en el
-                      mercado
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
-                    <p>
-                      Accedes a un precio reducido por algo de mucho valor.
-                      Eligiendo el pack anual ahorras un 20% de tu inversión por el mismo servicio.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                </div>
-              </container>
+<!-- ======= Landing pages section ======= -->
+<section class="container packs my-5">
+  <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+    <div class="redesSociales-video col-lg-5">
+      <img src="./assets/img/servicios/macbook.png" alt="macbook con un editor abierto" width="100%">
+    </div>
+    <div id="packs-info" class="packs-info col-lg-6">
+        <container class="container">
+          <div class="col">
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="packs-info-title pe-4 mb-3">Edición de videos Mensual</h3>
+              <p>
+                Necesitas una buena calidad de contenido, esa
+                es una de las razones principales para invertir.
+                Ahorrá muchísimo tiempo y problemas con un
+                servicio profesional y desarrollado en el
+                mercado
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/edicion-de-videos-mensual" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
             </div>
-          </div>
-        </article>
-        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5">
-            <img src="./assets/img/servicios/feed.png" alt="collage de fotos de la empresa" width="100%" class="mb-3">
-          </div>
-            <div id="packs-info" class="packs-info col-lg-6">
-              <container class="container">
-                <div class="col">
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Manejo de RR.SS Mensual</h3>
-                    <p>
-                      Delega el manejo de tu red social favorita.
-                      Desarrollamos un paquete mensual que mejora
-                      y realza la presencia de tu proyecto en las redes
-                      sociales.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Manejo de RR.SS Anual</h3>
-                    <p>
-                      Accedé a un descuento abonando el plan Anual.
-                      Nuestros servicios están diseñados para
-                      liberarte de preocupaciones y llevar tu proyecto
-                      al siguiente nivel.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                </div>
-              </container>
+            <!-- End packs-info Item -->
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
+              <p>
+                Accedes a un precio reducido por algo de mucho valor.
+                Eligiendo el pack anual ahorras un 20% de tu inversión por el mismo servicio.
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/edicion-de-videos-anual" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
             </div>
+            <!-- End packs-info Item -->
           </div>
-        </article>
-        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5">
-            <img src="./assets/img/servicios/celulares.png" alt="">
-          </div>
-            <div id="packs-info" class="packs-info col-lg-6">
-              <container class="container">
-                <div class="col">
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Placas para RR.SS Mensual</h3>
-                    <p>
-                      Te brindamos una solución constante. Creamos
-                      un servicio mensual de diseño personalizado
-                      para placas de redes sociales.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Placas para RR.SS Anual</h3>
-                    <p>
-                      Accedé a un descuento abonando el plan Anual.
-                      Ideal para las personas comprometidas con el
-                      crecimiento de su proyecto y que quieren llevar
-                      su calidad de diseño a otro nivel.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                </div>
-              </container>
+        </container>
+      </div>
+    </div>
+  </article>
+  <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+    <div class="redesSociales-video col-lg-5">
+      <img src="./assets/img/servicios/feed.png" alt="collage de fotos de la empresa" width="100%" class="mb-3">
+    </div>
+      <div id="packs-info" class="packs-info col-lg-6">
+        <container class="container">
+          <div class="col">
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="packs-info-title pe-4">Manejo de RR.SS Mensual</h3>
+              <p>
+                Delega el manejo de tu red social favorita.
+                Desarrollamos un paquete mensual que mejora
+                y realza la presencia de tu proyecto en las redes
+                sociales.
+              </p>
+              <a href="#" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
             </div>
+            <!-- End packs-info Item -->
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="pe-4">Manejo de RR.SS Anual</h3>
+              <p>
+                Accedé a un descuento abonando el plan Anual.
+                Nuestros servicios están diseñados para
+                liberarte de preocupaciones y llevar tu proyecto
+                al siguiente nivel.
+              </p>
+              <a href="#" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
+            </div>
+            <!-- End packs-info Item -->
           </div>
-        </article>
-      </section>
-      <!-- ======= End Landing pages section ======= -->
+        </container>
+      </div>
+    </div>
+  </article>
+  <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+    <div class="redesSociales-video col-lg-5">
+      <img src="./assets/img/servicios/celulares.png" width="100%" alt="">
+    </div>
+      <div id="packs-info" class="packs-info col-lg-6">
+        <container class="container">
+          <div class="col">
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="packs-info-title pe-4">Placas para RR.SS Mensual</h3>
+              <p>
+                Te brindamos una solución constante. Creamos
+                un servicio mensual de diseño personalizado
+                para placas de redes sociales.
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/placas-para-rr-ss-gestion-media" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
+            </div>
+            <!-- End packs-info Item -->
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="pe-4">Placas para RR.SS Anual</h3>
+              <p>
+                Accedé a un descuento abonando el plan Anual.
+                Ideal para las personas comprometidas con el
+                crecimiento de su proyecto y que quieren llevar
+                su calidad de diseño a otro nivel.
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/placas-para-rr-ss-servicio-anual" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
+            </div>
+            <!-- End packs-info Item -->
+          </div>
+        </container>
+      </div>
+    </div>
+  </article>
+</section>
+<!-- ======= End Landing pages section ======= -->
 
       <!-- portfolio slider -->
       <section id="clients" class="clients my-5">
