--- a/servicios-web.html
+++ b/servicios-web.html
@@ -281,109 +281,109 @@
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
-      <!-- ======= "Necesitas una web si" section ======= -->
-      <section class="container redesSociales d-flex my-5" data-aos="fade-up">
-        <div class="row">
-          <div class="redesSociales-video col-lg-6">
-            <img src="./assets/img/gif's/servicios-web.gif" alt="imagen de hearvey specter">
-          </div>
-          <div class="redesSociales-info col-lg-6">
-            <p>Diseño web</p>
-            <h1>
-              <strong class="redesSociales-info-title">
-                Necesitas una web si...
-              </strong>
-            </h1>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Ya no tienes tiempo</strong></h5>
-                <p>
-                  Una página web puede ayudarte a automatizar tareas como la
-                  reserva de citas y la recepción de pagos. Además el cliente
-                  tiene a su disposición toda la información que necesita para
-                  acceder o comprar sus servicios o productos sin depender de tu
-                  atención.
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Quieres pasar al siguiente nivel</strong></h5>
-                <p>
-                  En un mundo cada vez más digital, tener una página web es una
-                  inversión a largo plazo, esencial para mantenerse relevante y
-                  competitivo en el mercado actual. Creamos tu propia vidriera
-                  digital para que tu comunidad no dependa solo de las redes
-                  sociales.
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Buscas expandir tu alcance</strong></h5>
-                <p>
-                  y quieres atraer un público más amplio. Una página web te
-                  permite expandir tu presencia en línea, llegando a clientes
-                  potenciales en diferentes partes del mundo 24 horas al día
-                </p>
-              </div>
-            </div>
-          </div>
+<!-- ======= "Necesitas una web si" section ======= -->
+<section class="container redesSociales d-flex my-5" data-aos="fade-up">
+  <div class="row">
+    <div class="redesSociales-video col-lg-6">
+      <img src="./assets/img/gif's/servicios-web.gif" alt="imagen de hearvey specter">
+    </div>
+    <div class="redesSociales-info col-lg-6">
+      <p>Diseño web</p>
+      <h1 class="mb-4">
+        <strong class="redesSociales-info-title">
+          Necesitas una web si...
+        </strong>
+      </h1>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
         </div>
-      </section>
-      <!-- ======= End "Necesitas una web si" section ======= -->
+        <div class="col-lg-10">
+          <h5><strong>Ya no tienes tiempo</strong></h5>
+          <p>
+            Una página web puede ayudarte a automatizar tareas como la
+            reserva de citas y la recepción de pagos. Además el cliente
+            tiene a su disposición toda la información que necesita para
+            acceder o comprar sus servicios o productos sin depender de tu
+            atención.
+          </p>
+        </div>
+      </div>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
+        </div>
+        <div class="col-lg-10">
+          <h5><strong>Quieres pasar al siguiente nivel</strong></h5>
+          <p>
+            En un mundo cada vez más digital, tener una página web es una
+            inversión a largo plazo, esencial para mantenerse relevante y
+            competitivo en el mercado actual. Creamos tu propia vidriera
+            digital para que tu comunidad no dependa solo de las redes
+            sociales.
+          </p>
+        </div>
+      </div>
+      <div class="redesSociales-info-titles d-flex">
+        <div class="col-lg-2 pe-4 pt-2">
+          <i class="bi bi-arrow-right-circle-fill circle"></i>
+        </div>
+        <div class="col-lg-10">
+          <h5><strong>Buscas expandir tu alcance</strong></h5>
+          <p>
+            y quieres atraer un público más amplio. Una página web te
+            permite expandir tu presencia en línea, llegando a clientes
+            potenciales en diferentes partes del mundo 24 horas al día
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ======= End "Necesitas una web si" section ======= -->
 
-      <!-- ======= Landing pages section ======= -->
-      <section class="container packs">
-        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5">
-            <img src="./assets/img/servicios/macbook2.png" alt="">
-          </div>
-          <div class="packs-info col-lg-6">
-            <div id="packs-info" class="packs-info">
-              <container class="container">
-                <div class="col">
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Landing page</h3>
-                    <p>
-                      Tambien conocidas como "Página de aterrizaje"<br>
-                      proporcionan una experiencia enfocada y persuasiva para los visitantes
-                      con el objetivo de convertirlos en sus clientes.
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                  <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Standard page</h3>
-                    <p>
-                      Con una navegacion mas completa, permite que los visitantes exploren
-                      diferentes secciones.
-                      <br>
-                      <br>
-                    </p>
-                    <a href="#" class="readmore stretched-link"
-                      >Read more <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </div>
-                  <!-- End packs-info Item -->
-                </div>
-              </container>
+<!-- ======= Landing pages section ======= -->
+<section class="container packs">
+  <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+    <div class="redesSociales-video col-lg-5">
+      <img src="./assets/img/servicios/macbook2.png" width="100%" alt="">
+    </div>
+    <div class="packs-info col-lg-6">
+      <div id="packs-info" class="packs-info">
+        <container class="container">
+          <div class="col">
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="packs-info-title pe-4">Landing page</h3>
+              <p>
+                Tambien conocidas como "Página de aterrizaje"<br>
+                proporcionan una experiencia enfocada y persuasiva para los visitantes
+                con el objetivo de convertirlos en sus clientes.
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/landing-pages" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
             </div>
+            <!-- End packs-info Item -->
+            <div class="packs-info-item position-relative mb-3">
+              <h3 class="pe-4">Standard page</h3>
+              <p>
+                Con una navegacion mas completa, permite que los visitantes exploren
+                diferentes secciones.
+                <br>
+                <br>
+              </p>
+              <a href="https://474fd2-2.myshopify.com/products/pagina-web-standard" class="readmore stretched-link"
+                >Read more <i class="bi bi-arrow-right"></i
+              ></a>
+            </div>
+            <!-- End packs-info Item -->
           </div>
-        </article>
-      </section>
-      <!-- ======= End Landing pages section ======= -->
+        </container>
+      </div>
+    </div>
+  </article>
+</section>
+<!-- ======= End Landing pages section ======= -->
 
       <!-- portfolio slider -->
       <section id="clients" class="clients my-5">
